--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Firebase App Hosting
 on:
   push:
     branches:
-      - main # <<< IMPORTANT: Ensure this matches your default branch (e.g., 'main' or 'master')
+      - main
 
 jobs:
   deploy:
@@ -16,15 +16,17 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '22' # Or '22' if you upgraded Node.js to 22.x.x
-        cache: 'npm' # Caches npm dependencies to speed up builds
+        node-version: '22' # Or '22'
+        cache: 'npm'
+        cache-dependency-path: webapp/package-lock.json # <<< ADD THIS LINE!
+                                                         # Or webapp/yarn.lock if you're using Yarn
 
     - name: Install Webapp Dependencies
       run: cd webapp && npm install
-      
+
     - name: Build Web Application
-      run: cd webapp && npm run build 
-      
+      run: cd webapp && npm run build
+
     - name: Install Firebase CLI
       run: npm install -g firebase-tools
 
@@ -32,18 +34,10 @@ jobs:
       id: 'auth'
       uses: 'google-github-actions/auth@v2'
       with:
-        # REPLACE THIS with YOUR Workload Identity Provider ARN
-        # Format: projects/<PROJECT_NUMBER>/locations/global/workloadIdentityPools/<POOL_ID>/providers/<PROVIDER_ID>
-        # Example (YOUR details below): 'projects/641713712205/locations/global/workloadIdentityPools/github-actions-pool/providers/github-actions-provider'
         workload_identity_provider: 'projects/641713712205/locations/global/workloadIdentityPools/github-actions-pool/providers/github-actions-provider'
-        
-        # REPLACE THIS with YOUR Service Account Email
-        # Example (YOUR details below): 'github-action-1042088109@pim-and-order-management.iam.gserviceaccount.com'
         service_account: 'github-action-1042088109@pim-and-order-management.iam.gserviceaccount.com'
 
     - name: Deploy to Firebase App Hosting
-      # This command deploys only the App Hosting configured in firebase.json
       run: firebase deploy --only apphosting
       env:
-        # REPLACE THIS with YOUR Firebase Project ID
         FIREBASE_PROJECT: pim-and-order-management
