--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,18 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '22' # Or '22'
-        cache: 'npm'
-        cache-dependency-path: webapp/package-lock.json 
-        working-directory: webapp
-        
+        # No 'cache: npm' here anymore directly
+        # We will use actions/cache explicitly below
+
+    # Cache Node Modules for webapp
+    - name: Cache Node Modules
+      uses: actions/cache@v4 # Use the generic caching action
+      with:
+        path: webapp/node_modules # Directory to cache
+        key: ${{ runner.os }}-node-${{ hashFiles('webapp/package-lock.json') }} # Key based on OS and lock file hash
+        restore-keys: |
+          ${{ runner.os }}-node- # Fallback if specific lock file hash not found
+
     - name: Install Webapp Dependencies
       run: cd webapp && npm install
 
